fix: proposal card icon not showing on long titles (#962)

--- a/src/components/Proposal/View/Budget/CompetingProposalsSidebar.css
+++ b/src/components/Proposal/View/Budget/CompetingProposalsSidebar.css
@@ -1,5 +1,11 @@
 .ui.push.right.very.wide.visible.sidebar.CompetingProposalsSidebar {
-  width: 600px;
+  width: 100%;
+}
+
+@media (min-width: 768px) {
+  .ui.push.right.very.wide.visible.sidebar.CompetingProposalsSidebar {
+    width: 600px;
+  }
 }
 
 .CompetingProposalsSidebar {
